FIX body overflow on responsive mode :lipstick:

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,14 @@ body {
 	overflow-x: hidden;
 	min-height: 100vh;
 }
+
+@media screen and (min-width: 1024px) {
+	html,
+	body {
+		overflow: hidden;
+	}
+}
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
